# OxidizeML

./: .gitignore  Cargo.toml  Cargo_v2.toml  GUIDEBOOK.md  README.md  housing_features.csv  housing_labels.csv
crates-v2/: Cargo.toml
crates-v2/oximl-autodiff/: Cargo.toml
crates-v2/oximl-autodiff/src/: graph.rs  lib.rs  no_grad.rs  variable.rs
crates-v2/oximl-core/: Cargo.toml
crates-v2/oximl-core/src/: dtype.rs  lib.rs  ops.rs  tensor.rs
crates-v2/oximl-data/: Cargo.toml
crates-v2/oximl-data/src/: dataloader.rs  lib.rs  onnx.rs  polars_ext.rs
crates-v2/oximl-nn/: Cargo.toml
crates-v2/oximl-nn/src/: cv.rs  lib.rs  nlp.rs
crates-v2/oximl-nn/src/layers/: linear.rs
crates-v2/oximl-nn/src/modules/: loss.rs  mod.rs
crates-v2/oximl-nn/src/modules/cv/: conv2d.rs  mod.rs  pool2d.rs  resnet.rs
crates-v2/oximl-nn/src/modules/nlp/: attention.rs  embedding.rs  mod.rs  transformer.rs
crates-v2/oximl-optim/: Cargo.toml
crates-v2/oximl-optim/src/: adam.rs  lib.rs  sgd.rs
crates/oxidize-ml/: Cargo.toml
crates/oxidize-ml-autodiff/: Cargo.toml
crates/oxidize-ml-autodiff/src/: backward.rs  graph.rs  lib.rs  variable.rs
crates/oxidize-ml-cluster/: Cargo.toml
crates/oxidize-ml-cluster/src/: agglomerative.rs  dbscan.rs  kmeans.rs  lib.rs
crates/oxidize-ml-core/: Cargo.toml
crates/oxidize-ml-core/src/: dtype.rs  error.rs  lib.rs  shape.rs  tensor.rs
crates/oxidize-ml-data/: Cargo.toml
crates/oxidize-ml-data/src/: dataloader.rs  dataset.rs  lib.rs
crates/oxidize-ml-datasets/: Cargo.toml
crates/oxidize-ml-datasets/src/: builtin.rs
crates/oxidize-ml-io/: Cargo.toml
crates/oxidize-ml-io/src/: csv_io.rs  lib.rs  model_io.rs
crates/oxidize-ml-linalg/: Cargo.toml
crates/oxidize-ml-linalg/src/: decomposition.rs  lib.rs  solve.rs  svd.rs
crates/oxidize-ml-linear/: Cargo.toml
crates/oxidize-ml-linear/src/: elastic_net.rs  lib.rs  logistic.rs  regression.rs
crates/oxidize-ml-loss/: Cargo.toml
crates/oxidize-ml-loss/src/: lib.rs  loss.rs
crates/oxidize-ml-metrics/: Cargo.toml
crates/oxidize-ml-metrics/src/: classification.rs  lib.rs  regression.rs
crates/oxidize-ml-naive-bayes/: Cargo.toml
crates/oxidize-ml-naive-bayes/src/: lib.rs  multinomial.rs  naive_bayes.rs
crates/oxidize-ml-neighbors/: Cargo.toml
crates/oxidize-ml-neighbors/src/: knn.rs  lib.rs
crates/oxidize-ml-nn/: Cargo.toml
crates/oxidize-ml-nn/src/: conv.rs  layers.rs  lib.rs  recurrent.rs  sequential.rs
crates/oxidize-ml-optim/: Cargo.toml
crates/oxidize-ml-optim/src/: lib.rs  optimizer.rs  scheduler.rs
crates/oxidize-ml-pipeline/: Cargo.toml
crates/oxidize-ml-pipeline/src/: pipeline.rs
crates/oxidize-ml-preprocessing/: Cargo.toml
crates/oxidize-ml-preprocessing/src/: encoder.rs  lib.rs  pca.rs  scaler.rs  split.rs  tsne.rs
crates/oxidize-ml-svm/: Cargo.toml
crates/oxidize-ml-svm/src/: lib.rs  svm.rs  svr.rs
crates/oxidize-ml-tree/: Cargo.toml
crates/oxidize-ml-tree/src/: decision_tree.rs  gradient_boosting.rs  lib.rs  random_forest.rs
crates/oxidize-ml/src/: lib.rs
oxidize-ml-cli/: Cargo.toml
oxidize-ml-cli/src/: main.rs
