[workspace]
resolver = "2"
members = [ "oximl-autodiff",
    "oximl-core", "oximl-data", "oximl-nn", "oximl-optim",
]

[workspace.dependencies]
ndarray = "0.15"
blas-src = { version = "0.8", default-features = false, features = ["accelerate"] }
accelerate-src = { version = "0.3" }
rand = "0.8"
thiserror = "2"
